--- a/static/test/e2e/runner.html
+++ b/static/test/e2e/runner.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <script src="../lib/angular-scenario.js" ng-autotest></script>
     <script src="../lib/angular-scenario-waitFor.js"></script>
-    <script src="scenarios.js"></script>
+    <script src="access.js"></script>
+    <script src="transactions.js"></script>
   </head>
   <body>
   </body>
