--- a/static/test/e2e/runner.html
+++ b/static/test/e2e/runner.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>End2end Test Runner</title>
+    <title>Niqels Front-End Test Runner</title>
     <meta charset="utf-8">
     <script src="../lib/angular-scenario.js" ng-autotest></script>
     <script src="../lib/angular-scenario-waitFor.js"></script>
+    <script src="../lib/jquery-1.10.2.js"></script>
+    <script src="../lib/bililiteRange.js"></script>
+    <script src="../lib/jquery.sendkeys.js"></script>
     <script src="access.js"></script>
     <script src="transactions.js"></script>
   </head>
