tests on report

--- a/static/test/e2e/runner.html
+++ b/static/test/e2e/runner.html
@@ -8,8 +8,11 @@
     <script src="../lib/angular-scenario-waitFor.js"></script>
     <script src="../lib/bililiteRange.js"></script>
     <script src="../lib/jquery.sendkeys.js"></script>
+    <script src="../lib/moment.min.js"></script>
+    <script src="../lib/pt-br.js"></script>
     <script src="access.js"></script>
     <script src="transactions.js"></script>
+    <script src="reports.js"></script>
   </head>
   <body>
   </body>
